# Hacker-Launcher

./: Cargo.toml  README.md  build.hacker  build.hl  config_manager.py  game_manager.py  main.py  main_window.py  proton_manager.py  styles.qss
source-code/: App.tsx  Cargo.toml  config_manager.py  constants.ts  game_manager.py  index.css  index.html  index.tsx  main_window.py  package.json  tailwind.config.js  types.ts  vite.config.ts
source-code/components/: AddGameModal.tsx  GameCard.tsx  Header.tsx  ProtonManager.tsx  SettingsView.tsx  Sidebar.tsx  Terminal.tsx
source-code/electron/: main.js
source-code/services/: tauriBridge.tsx
source-code/src/: App.tsx  index.css  main.rs  types.ts
source-code/src-tauri/: Cargo.toml  tauri.conf.json
source-code/src-tauri/src/: config_manager.rs  game_manager.rs  lib.rs  main.rs  proton_manager.rs
source-code/src/components/: AboutTab.tsx  AddGameModal.tsx  ConfigureGameModal.tsx  GamesTab.tsx  ProtonsTab.tsx  SettingsTab.tsx  ToastContainer.tsx
src/: main.rs
