[package]
name = "hacker-launcher"
version = "0.9.0"
description = "Hacker Launcher - Game launcher with Proton/Wine support"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
edition = "2021"

[lib]
name = "hacker_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1"
futures-util = "0.3"
walkdir = "2"
which = "6"
flate2 = "1"
tar = "0.4"
